[project]
name = "claude-rlm"
version = "0.1.0"
description = "Claude Code backend for RLM (Recursive Language Models)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Luis Chaves Rodriguez" }
]
keywords = ["claude", "rlm", "recursive", "language-models", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "rlm @ git+https://github.com/alexzhang13/rlm.git",
    "claude-agent-sdk>=0.1.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
claude-rlm = "claude_rlm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_rlm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true
